--- a/index.html
+++ b/index.html
@@ -518,10 +518,12 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	          <p class="STYLE223">2026
 		    <a href="https://2026.eurosys.org" target="_blank">EuroSys</a>,
 		    <a href="https://www.usenix.org/conference/nsdi26" target="_blank">NSDI</a>,
+		    <a href="https://conf.researchr.org/home/fse-2026" target="_blank">FSE</a>,
 	          </p>
 		  <p class="STYLE223">2025
 		    <a href="https://sigops.org/s/conferences/sosp/2025" target="_blank">SOSP</a>,
 		    <a href="https://www.usenix.org/conference/osdi25" target="_blank">OSDI</a>,
+		    <a href="https://www.usenix.org/conference/osdi25/call-for-artifacts" target="_blank">OSDI AE</a> (co-chair),
 		    <a href="https://2025.eurosys.org" target="_blank">EuroSys</a>,
 		    <a href="https://www.asplos-conference.org/asplos-2025-call-for-papers" target="_blank">ASPLOS</a>,
 		    <a href="https://www.usenix.org/conference/nsdi25" target="_blank">NSDI</a>,
