--- a/index.html
+++ b/index.html
@@ -528,12 +528,12 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		    <a href="https://www.asplos-conference.org/asplos-2025-call-for-papers" target="_blank">ASPLOS</a>,
 		    <a href="https://www.usenix.org/conference/nsdi25" target="_blank">NSDI</a>,
 		    <a href="https://hpca-conf.org/2025/" target="_blank">HPCA</a>,
-		    <a href="https://microarch.org/micro58/" target="_blank">MICRO (ERC)</a>,
+		    <a href="https://microarch.org/micro58/" target="_blank">MICRO</a> (ERC),
 	          </p>
 	          <p class="STYLE223">2024
 		    <a href="https://2024.eurosys.org/" target="_blank">EuroSys</a>,
 		    <a href="https://www.usenix.org/conference/atc24" target="_blank">USENIX ATC</a>,
-		    <a href="https://microarch.org/micro57/" target="_blank">MICRO (ERC)</a>,
+		    <a href="https://microarch.org/micro57/" target="_blank">MICRO</a> (ERC),
 		    <a href="https://acm-ieee-sec.org/2024/" target="_blank">SEC</a>,
 		    <a href="https://conferences.sigcomm.org/sigcomm/2024/workshop/ebpf/" target="_blank">eBPF</a>,
 		    <a href="https://sesame2024.github.io/" target="_blank">SESAME</a>,
@@ -560,8 +560,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
           	  </p>
 		  <p class="STYLE223">2021
 	            <a href="https://sigops.org/s/conferences/hotos/2021/" target="_blank">HotOS</a>,
-	            <a href="https://sosp2021.mpi-sws.org/" target="_blank">SOSP (virtual platform chair)</a>,
-	            <a href="https://2021.eurosys.org/" target="_blank">EuroSys (sponsorship co-chair)</a>,
+	            <a href="https://sosp2021.mpi-sws.org/" target="_blank">SOSP</a> (virtual platform chair),
+	            <a href="https://2021.eurosys.org/" target="_blank">EuroSys</a> (sponsorship co-chair),
                     <a href="https://conf.researchr.org/home/icse-2021" target="_blank">ICSE</a>,
 	            <a href="http://www.sigmetrics.org/sigmetrics2021/call_for_src.html" target="_blank">Sigmetrics SRC</a>,
           	  </p>
@@ -570,18 +570,18 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                     <a href="https://www.sigmobile.org/mobisys/2020/" target="_blank">MobiSys</a>,
                     <a href="https://edge-sys.github.io/2020/submission.html" target="_blank">EdgeSys</a>,
                     <a href="https://2020.esec-fse.org/track/esecfse-2020-tool-demos" target="_blank">FSE Tool/Demo</a>,
-	                </p>
-			            <p class="STYLE223">2019
+	          </p>
+		  <p class="STYLE223">2019
                     <a href="https://www.sigops.org/sosp/sosp19/" target="_blank">SOSP</a>,
                     <a href="https://icsr.zju.edu.cn/apsys2019/" target="_blank">APSys</a>,
-			              <a href="https://seconfig.github.io/" target="_blank">SEConfig</a>,
+		    <a href="https://seconfig.github.io/" target="_blank">SEConfig</a>,
                     <a href="https://edgesys19.cm.in.tum.de/" target="_blank">EdgeSys</a>
                   </p>
                   <p class="STYLE223">2018
                     <a href="http://conferences.inf.ed.ac.uk/EuroDW2018/" target="_blank">EuroSys DW</a>,
-				            <a href="https://www.sigmobile.org/mobisys/2018/workshops/edgesys18/" target="_blank">EdgeSys</a>,
-				            <a href="http://icdcs2018.ocg.at" target="_blank">ICDCS</a>
-	                </p>
+		    <a href="https://www.sigmobile.org/mobisys/2018/workshops/edgesys18/" target="_blank">EdgeSys</a>,
+		    <a href="http://icdcs2018.ocg.at" target="_blank">ICDCS</a>
+	          </p>
                   <p class="STYLE223">2017
                     <a href="https://www.sigops.org/sosp/sosp17/src.html" target="_blank">SOSP SRC</a>
                   </p>
