--- a/index.html
+++ b/index.html
@@ -620,6 +620,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									awarded <a href="https://siebelschool.illinois.edu/about/awards/undergraduate-scholarships-awards/jeffrey-p-blahut-memorial-scholarship" target="_blank"><font color="#E84A27">Jeffrey P. Blahut Memorial Scholarship</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a>, Undergraduate Student (Tsinghua) (Spring 2025 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shanbo Zhang</a>, Undergraduate Student (Spring 2025 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Rubin Du</a>, Undergraduate Student (Spring 2025 - now)</p>
 				<!--
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Xuecheng Liu</a>, Undergraduate Student (ZJU-UIUC) (Summer 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Quan Hao Ng</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
