--- a/travel.html
+++ b/travel.html
@@ -154,7 +154,7 @@ div.Section1
                                                 </li>
 						<li><font color="#083b89"><b>China</b></font>:
                           <ul style="list-style-type:circle">
-                            <li>Beijing (2009, 2024) </li>
+                            <li>Beijing (2009, 2024, 2025) </li>
                             <li>Changzhou (2008) </li>
                             <li>Chuzhou (1998) </li>
                             <li>Danyang (2000) </li>
@@ -354,7 +354,9 @@ div.Section1
                                                   <ul style="list-style-type:circle">
 						     <li>Interlaken (2011) </li>
 						     <li>Jungfrau (2011) </li>
+						     <li>Lausanne (2025) </li>
 						     <li>Lucerne (2011) </li>
+						     <li>Zürich (2025) </li>
                                                   </ul>
                                                 </li>
 						<li><font color="#083b89"><b>The Netherlands</b></font>:
