--- a/travel.html
+++ b/travel.html
@@ -326,6 +326,11 @@ div.Section1
 						     <li>Lisbon (2011, 2024) </li>
                                                   </ul>
                                                 </li>
+						<li><font color="#083b89"><b>Qatar</b></font>:
+                                                  <ul style="list-style-type:circle">
+						     <li>Doha (2024) </li>
+                                                  </ul>
+                                                </li>
 						<li><font color="#083b89"><b>Slovakia</b></font>:
                                                   <ul style="list-style-type:circle">
 						     <li>Bratislava (2011) </li>
@@ -352,6 +357,7 @@ div.Section1
                                                 </li>
 						<li><font color="#083b89"><b>Switzerland</b></font>:
                                                   <ul style="list-style-type:circle">
+						     <li>Geneva (2025) </li>
 						     <li>Interlaken (2011) </li>
 						     <li>Jungfrau (2011) </li>
 						     <li>Lausanne (2025) </li>
@@ -364,6 +370,11 @@ div.Section1
 						     <li>Amsterdam (2010, 2011) </li>
 						     <li>Den Haag (2010, 2011) </li>
 						     <li>Zaandam (2010, 2011) </li>
+                                                  </ul>
+                                                </li>
+						<li><font color="#083b89"><b>United Arab Emirates</b></font>:
+                                                  <ul style="list-style-type:circle">
+						     <li>Dubai (2010, 2025) </li>
                                                   </ul>
                                                 </li>
 						<li><font color="#083b89"><b>United States</b></font>:
