--- a/index.html
+++ b/index.html
@@ -442,9 +442,12 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
-				<p class="STYLE223">Jackson will give tutorials on benchmarking AI agents for system reliability problems at DSN and FSE</p>
+				<p class="STYLE223">Jackson will give tutorials on benchmarking AI agents for system reliability problems at 
+					<a href="https://dsn2025.github.io" target="_blank">DSN</a> and 
+					<a href="https://conf.researchr.org/track/fse-2025/fse-2025-tutorials?" target="_blank">FSE</a>
+				</p>
 				<p class="STYLE223">Jinghao will present <a href="https://github.com/rex-rs/rex/" target="_blank">Rex</a> at <a href="https://sched.co/1zfpE" target="_blank">Open Source Summit</a></p>
-				<p class="STYLE223">Tianyin presents Software Reliability in Emerging Cloud Computing Paradigms at 
+				<p class="STYLE223">Tianyin presented Software Reliability in Emerging Cloud Computing Paradigms at 
 					<a href="https://sky.cs.berkeley.edu/events/sky-seminar-tianyin-xu-uiuc-software-reliability-in-emerging-cloud-computing-paradigms" target="_blank">Sky Seminar</a>, 
 					<a href="https://www.pdl.cmu.edu/SDI/2024/112124.html" target="_blank">CMU SDI Seminar</a>,
 					<a href="https://suri.epfl.ch" target="_blank">EPFL SuRI</a>,
