--- a/index.html
+++ b/index.html
@@ -451,8 +451,11 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 						which summarizes the group's efforts on cloud system reliability, at
 					<a href="https://sky.cs.berkeley.edu/events/sky-seminar-tianyin-xu-uiuc-software-reliability-in-emerging-cloud-computing-paradigms" target="_blank">Sky Seminar</a>, 
 					<a href="https://www.pdl.cmu.edu/SDI/2024/112124.html" target="_blank">CMU SDI Seminar</a>,
+					UIUC SysNet Retreat, 
+					ETH,
 					<a href="https://suri.epfl.ch" target="_blank">EPFL SuRI</a>,
-					ETH, and UIUC SysNet Retreat.
+					and 
+					<a href="https://cloudresearch.org/workshops/18th/" target="_blank">Cloud Control Workshop</a>.
 				</p>
 				<p class="STYLE223">Jinghao and Tyler are invited to present <a href="poster/Rex-IIDAI.pdf" target="_blank">Rex</a> and <a href="poster/Acto-IIDAI.pdf" target="_blank">Acto</a> at IBM Research Day</p>
 				<p class="STYLE223">Three USENIX ;login: magazine articles on
