--- a/travel.html
+++ b/travel.html
@@ -353,6 +353,7 @@ div.Section1
                                                   <ul style="list-style-type:circle">
 						     <li>Lund (2011) </li>
 						     <li>Malmö (2011)</li>
+						     <li>Stockholm (2025)</li>
                                                   </ul>
                                                 </li>
 						<li><font color="#083b89"><b>Switzerland</b></font>:
