--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 					<a href="https://dsn2025.github.io/cptutorials.html" target="_blank">DSN</a> and 
 					<a href="https://conf.researchr.org/track/fse-2025/fse-2025-tutorials?" target="_blank">FSE</a>
 				</p>
+				<p class="STYLE223">ITBench is spotlighted by <a href="https://discoveryacceleratorinstitute.grainger.illinois.edu/news/76016" target="_blank">IBM-Illinois Discovery Accelerator Institute</a>.</p> 
 				<p class="STYLE223">Jinghao will present <a href="https://github.com/rex-rs/rex/" target="_blank">Rex</a> at <a href="https://sched.co/1zfpE" target="_blank">Open Source Summit</a></p>
 				<p class="STYLE223">Tianyin presented Software Reliability in Emerging Cloud Computing Paradigms, 
 						which summarizes the group's efforts on cloud system reliability, at
@@ -466,7 +467,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 					<a href="pub/lpc-linux-testing.pdf" target="_blank">the Refereed Track</a>, 
 					<a href="pub/lpc-2024-2.pdf" target="_blank">Kernel Testing & Dependability</a>, 
 					and <a href="pub/lpc-2024-3.pdf">Safe Systems with Linux</a></p>
+	<!--
 				<p class="STYLE223">Kubernetes Reliability and an Avenue to Reliable Cloud Infrastructures at IEEE Emerging Technology Reliability Roundtable</p>
+	-->
 				<p class="STYLE223">Making Linux Fly: Towards Certified Linux Kernel at <a href="https://elisa.tech/event/elisa-seminar-making-linux-fly-towards-certified-linux-kernel/" target="_blank">the ELISA Seminar</a> and <a href="pub/lpc-linux-testing.pdf" target="_blank">Linux Plumbers Conference (LPC) 2024</a></p>
 				<p class="STYLE223"><a href="pub/srecon24americas_slides-xu.pdf" target="_blank">Cross-System Interaction Failures: Don't Fail through the Cracks</a> at <a href="https://www.usenix.org/conference/srecon24americas/presentation/xu" target="_blank">SREcon24 Americas</a></p>
 				<p class="STYLE223">Acto is spotlighted by <a href="https://cs.illinois.edu/news/-acto-IBM" target="_blank">CS news</a> and <a href="https://siebelschool.illinois.edu/news/tianyin-xu-IIDA" target="_blank">IIDAI newsletter</a></p> 
