--- a/index.html
+++ b/index.html
@@ -448,8 +448,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				</p>
 				<p class="STYLE223">ITBench is spotlighted by <a href="https://discoveryacceleratorinstitute.grainger.illinois.edu/news/76016" target="_blank">IBM-Illinois Discovery Accelerator Institute</a>.</p> 
 				<p class="STYLE223">Jinghao will present <a href="https://github.com/rex-rs/rex/" target="_blank">Rex</a> at <a href="https://sched.co/1zfpE" target="_blank">Open Source Summit</a></p>
-				<p class="STYLE223">Tianyin presented Software Reliability in Emerging Cloud Computing Paradigms, 
-						which summarizes the group's efforts on cloud system reliability, at
+				<p class="STYLE223">Tianyin presented the group's efforts on cloud system reliability at
 					<a href="https://sky.cs.berkeley.edu/events/sky-seminar-tianyin-xu-uiuc-software-reliability-in-emerging-cloud-computing-paradigms" target="_blank">Sky Seminar</a>, 
 					<a href="https://www.pdl.cmu.edu/SDI/2024/112124.html" target="_blank">CMU SDI Seminar</a>,
 					UIUC SysNet Retreat, 
