--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -151,25 +151,7 @@ td.papers {
         </div>
       </td>
   </tr>
-	  
-  <tr>
-    <td class="date"><font color="#083b89"></font></td>
-      <td class="papers">
-        <div align="justify" class="STYLE4">
-          <p></p>
-            <span style="font-size: 12pt;">
-	    <strong><a href="https://jasondliu.com" target="_blank">Jason Liu</a></strong>
-	    <br>
-	    Designing and Analyzing Security Systems via Analysis of Log Data
-	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on July 29, 2024.
-            <br>
-            Advisor: <a href="https://sts.cs.illinois.edu/team/adam-bates.html" target="_blank">Adam Bates</a>
-          </span>
-        </div>
-      </td>
-  </tr>
-	  
+
   <tr>
     <td class="date"><font color="#083b89"></font></td>
       <td class="papers">
@@ -183,6 +165,36 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 3, 2024.
             <br>
             Advisor: <a href="https://csl.illinois.edu/directory/faculty/nskim" target="_blank">Nam Sung Kim</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+	    ~~
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+	    <strong><a href="https://jasondliu.com" target="_blank">Jason Liu</a></strong>
+	    <br>
+	    Designing Practical Security Systems via Information Flow Analysis of Log Data
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on July 29, 2024.
+            <br>
+            Advisor: <a href="https://sts.cs.illinois.edu/team/adam-bates.html" target="_blank">Adam Bates</a>
           </span>
         </div>
       </td>
