--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -192,7 +192,7 @@ td.papers {
 	    <br>
 	    Designing Practical Security Systems via Information Flow Analysis of Log Data
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on July 29, 2024.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on June 30, 2025.
             <br>
             Advisor: <a href="https://sts.cs.illinois.edu/team/adam-bates.html" target="_blank">Adam Bates</a>
           </span>
