--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
 						      <p class="STYLE223">2025 Best Paper Award at ASPLOS'25 (<a href="pub/cxlfork.pdf" target="_blank">cxlfork</a>)</p>
-						      <p class="STYLE223">2025 Spotlight at ICML'25 (<a href="https://arxiv.org/abs/2502.05352" target="_blank">ITBench</a>)</p>
+						      <p class="STYLE223">2025 Spotlight (also selected for oral) at ICML'25 (<a href="https://arxiv.org/abs/2502.05352" target="_blank">ITBench</a>)</p>
 						      <p class="STYLE223">2024 <a href="pub/osdi24_award_anvil.pdf" target="_blank">Jay Lepreau Best Paper Award</a> at OSDI'24 (<a href="pub/anvil.pdf" target="_blank">Anvil</a>)</p>
 						      <p class="STYLE223">2024 C.W. Gear Outstanding Junior Faculty Award (tribute to <a href="https://cs.illinois.edu/news/remembering-department-head-faculty-member-charles-william-bill-gear" target="_blank">Professor C.W. Gear</a>)</p>
 						      <p class="STYLE223">2024 Dean's Award for Excellence in Research</p>
@@ -610,10 +610,6 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                             <TD class=content_title>&nbsp;</TD>  
                               <TD class=content width="96%">
 								<p class="STYLE223"><a href="https://yulistic.gitlab.io/" target="_blank">Jongyul Kim</a>, Postdoc Research Fellow (Fall 2023 - now)</p>
-								<p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a>, PhD Candidate (Fall 2019 - now), 
-									awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/yunni-and-maxine-pao-memorial-fellowship" target="_blank"><font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font></a>,
-									<a href="https://mavis.grainger.illinois.edu/" target="_blank"><font color="#E84A27">Mavis Future Faculty Fellow</font></a>
-								</p>
 								<p class="STYLE223"><a href="https://schai.me" target="_blank">Siyuan Chai</a>, PhD Candidate (Fall 2021 - now)</p>
 				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Candidate (Fall 2021 - now),
 									awarded <a href="https://mavis.grainger.illinois.edu/" target="_blank"><font color="#E84A27">Mavis Future Faculty Fellow</font></a>
@@ -649,6 +645,10 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
 				  <p class="STYLE224"># Doctors</p>
+				  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a>, PhD Candidate (Fall 2019 - now), 
+					awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/yunni-and-maxine-pao-memorial-fellowship" target="_blank"><font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font></a>,
+					<a href="https://mavis.grainger.illinois.edu/" target="_blank"><font color="#E84A27">Mavis Future Faculty Fellow</font></a> &rarr; University of Toronto (assistant professor)
+				  </p>
 			          <p class="STYLE223"><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a>, PhD 2025 (dissertation), co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, 
 				  	awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>, 
 					<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a> &rarr; Meta
