--- a/index.html
+++ b/index.html
@@ -645,11 +645,12 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
 				  <p class="STYLE224"># Doctors</p>
-				  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a>, PhD Candidate (Fall 2019 - now), 
+				  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a>, PhD 2025 (dissertation),
 					awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/yunni-and-maxine-pao-memorial-fellowship" target="_blank"><font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font></a>,
 					<a href="https://mavis.grainger.illinois.edu/" target="_blank"><font color="#E84A27">Mavis Future Faculty Fellow</font></a> &rarr; University of Toronto (assistant professor)
 				  </p>
-			          <p class="STYLE223"><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a>, PhD 2025 (dissertation), co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, 
+			          <p class="STYLE223"><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a>, PhD 2025 (dissertation), 
+					co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, 
 				  	awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>, 
 					<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a> &rarr; Meta
 				  </p>
