--- a/index.html
+++ b/index.html
@@ -623,6 +623,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								</p>
 								<p class="STYLE223"><a href="https://wentao.systems" target="_blank">Wentao Zhang</a>, PhD Student (Fall 2023 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 								<p class="STYLE223"><a href="https://codyrivera.com" target="_blank">Cody Rivera</a>, Visiting PhD Student (Fall 2024 - now) &rarr; University of Wisconsin-Madison (PhD)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, MS Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Leshna Balara</a>, MS Student (UW–Madison) (Spring 2025 - now)</p>
 								<p class="STYLE223"><a href="https://xinze-zheng.github.io" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now),
 									awarded <a href="https://siebelschool.illinois.edu/about/awards/undergraduate-scholarships-awards/jeffrey-p-blahut-memorial-scholarship" target="_blank"><font color="#E84A27">Jeffrey P. Blahut Memorial Scholarship</font></a>
@@ -679,6 +680,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://songlkkevin.github.io" target="_blank">Linkai Song</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; HKUST (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Tingxu Ren</a> (Zhejiang University), UIUC+ SUR in SE, Summer 2024 &rarr; Tsinghua University (MS)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a> (LUMS), UIUC+ SUR in SE, 2023-2024 &rarr; UIUC (MS)</p>
+			          <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, BE 2024 &rarr; UIUC (MS)</p>
 				  <p class="STYLE223"><a href="https://moogician.github.io/" target="_blank">Hao (Tony) Wang</a> (Peking U.), UIUC+ SUR in SE, Summer 2023 co-hosted by <a href="https://mir.cs.illinois.edu/marinov" target="_blank">Darko Marinov</a> &rarr; University of California Berkeley (PhD)</p>
 				  <p class="STYLE223"><a href="https://fanchung.net" target="_blank">Fan Chung</a> (UIUC/NYCU), 2023-2024 &rarr; EPFL (PhD)</p>
 				  <p class="STYLE223"><a href="https://irisesd.github.io" target="_blank">Cheng Ding</a> (USTC), UIUC+ SUR in SE, Fall 2023, co-advised by <a href="https://www.cs.cornell.edu/~legunsen" target="_blank">Owolabi Legunsen</a> &rarr; University of Texas at Austin (PhD)</p>
