--- a/index.html
+++ b/index.html
@@ -623,6 +623,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								</p>
 								<p class="STYLE223"><a href="https://wentao.systems" target="_blank">Wentao Zhang</a>, PhD Student (Fall 2023 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 								<p class="STYLE223"><a href="https://codyrivera.com" target="_blank">Cody Rivera</a>, Visiting PhD Student (Fall 2024 - now) &rarr; University of Wisconsin-Madison (PhD)</p>
+								<p class="STYLE223"><a href="https://cathy-cai.page/" target="_blank">Cathy Cai</a>, PhD Student (Fall 2024 - now)</p>
+								<p class="STYLE223"><a href="https://hacksonclark.github.io" target="_blank">Jackson Clark</a>, PhD Student (Fall 2024 - now)</p>
+								<p class="STYLE223"><a href="https://yimingsu01.github.io" target="_blank">Yiming Su</a>, PhD Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, MS Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Leshna Balara</a>, MS Student (UW–Madison) (Spring 2025 - now)</p>
 								<p class="STYLE223"><a href="https://xinze-zheng.github.io" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now),
