--- a/travel.html
+++ b/travel.html
@@ -176,6 +176,7 @@ div.Section1
                             <li>Weihai (2009) </li>
                             <li>Wuhu (2013) </li>
                             <li>Wuxi (2008) </li>
+			    <li>Xiong'an (2025) </li>
                             <li>Yangzhou (1996) </li>
                             <li>Yixing (1996, 2024) </li>
                           </ul>
@@ -392,7 +393,7 @@ div.Section1
 						    <li>Big Sur, CA (2017) </li>
 					            <li>Bloomington, IL (2020, 2023) </li>
 						    <li>Bloomington, IN (2021) </li>
-                            			    <li>Boston, MA (2019, 2023) </li>
+                            			    <li>Boston, MA (2019, 2023, 2025) </li>
 						    <li>Boulder, CO (2023) </li>
 						    <li>Broomfield, CO (2014) </li>
 						    <li>Buffalo, NY (2023) </li>	  
