--- a/pub.html
+++ b/pub.html
@@ -95,7 +95,15 @@ td.papers {
 						  Project: <a href="https://github.com/rex-rs/rex" target="_blank">https://github.com/rex-rs/rex</a>
 						  <br>
 						  <font color="#C40233">
-					            <b>Selected for presentation by <a href="https://ossna2025.sched.com/event/1zfpE" target="_blank">Open Source Summit 2025</a></b>
+					            <b>Selected for presentation by <a href="https://www.youtube.com/watch?v=4r7ECxEaGqM" target="_blank">Open Source Summit 2025</a></b>
+					          </font>
+						  <br>
+						  <font color="#C40233">
+					            <b>Covered by <a href="https://www.reddit.com/r/rust/comments/1lxm2kx/rex_closing_the_languageverifier_gap_with_safe/" target="_blank">Reddit r/rust</a>,
+							<a href="https://www.phoronix.com/forums/forum/software/general-linux-open-source/1559602-rex-kernel-extensions-in-rust">Phoronix</a>,
+						    	<a href="https://discourse.ubuntu.com/t/open-source-summit-from-the-linux-foundation-june-23-25-denver-colorado-usa/63534">Ubuntu Community Discourse</a>, and
+							<a href="https://news.ycombinator.com/item?id=44537955" target="_blank">Hacker News</a>.
+						    </b>
 					          </font>
 					  	</span>
 				  </div>
