--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 					      <TD class=content width="96%">
 						      <p class="STYLE223">2025 Best Paper Award at ASPLOS'25 (<a href="pub/cxlfork.pdf" target="_blank">cxlfork</a>)</p>
 						      <p class="STYLE223">2025 Spotlight (also selected for oral) at ICML'25 (<a href="https://arxiv.org/abs/2502.05352" target="_blank">ITBench</a>)</p>
+						      <p class="STYLE223">2025 (Spring) UIUC List of Teachers Ranked as Excellent (CS 591SN)</p>
 						      <p class="STYLE223">2024 <a href="pub/osdi24_award_anvil.pdf" target="_blank">Jay Lepreau Best Paper Award</a> at OSDI'24 (<a href="pub/anvil.pdf" target="_blank">Anvil</a>)</p>
 						      <p class="STYLE223">2024 C.W. Gear Outstanding Junior Faculty Award (tribute to <a href="https://cs.illinois.edu/news/remembering-department-head-faculty-member-charles-william-bill-gear" target="_blank">Professor C.W. Gear</a>)</p>
 						      <p class="STYLE223">2024 Dean's Award for Excellence in Research</p>
