--- a/pub.html
+++ b/pub.html
@@ -62,6 +62,22 @@ td.papers {
   <tbody>
 
 	<tr>
+		<td class="date"><font color="#083b89">NSDI'26</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Who Watches the Watchers? On the Reliability of Softwarizing Cloud Application Management</strong> [<a href="pub/oat.pdf" target="_blank">pdf</a> | <a href="pub/oat_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jiawei Tyler Gu, Zhen Tang, Yiming Su, Bogdan A. Stoica, Xudong Sun, William X. Zheng, Yue Zhang, Akond Rahman, Chen Wang, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 23rd USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>NSDI'26</b></font>), Renton, WA, May 2026.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">OSDI'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
