--- a/pub.html
+++ b/pub.html
@@ -78,6 +78,22 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">MICRO'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Chameleon: Adaptive Caching and Scheduling for Many-Adapter LLM Inference Environments</strong> [<a href="pub/chameleon.pdf" target="_blank">pdf</a> | <a href="pub/chameleon_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Nikoleta Iliakopoulou, Jovan Stojkovic, Chloe Alverti, Tianyin Xu, Hubertus Franke, and Josep Torrellas
+						  <br>
+						  In Proceedings of the 58th IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-58</b></font>), Seoul, Korea, Oct. 2025.
+					  </span>
+				  </div>
+		  </td>
+	</tr> 
+
+	<tr>
 		<td class="date"><font color="#083b89">OSDI'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
@@ -118,7 +134,7 @@ td.papers {
 					            <b>Covered by <a href="https://www.reddit.com/r/rust/comments/1lxm2kx/rex_closing_the_languageverifier_gap_with_safe/" target="_blank">Reddit r/rust</a>,
 							<a href="https://www.phoronix.com/forums/forum/software/general-linux-open-source/1559602-rex-kernel-extensions-in-rust">Phoronix</a>,
 						    	<a href="https://discourse.ubuntu.com/t/open-source-summit-from-the-linux-foundation-june-23-25-denver-colorado-usa/63534">Ubuntu Community Discourse</a>, and
-							<a href="https://news.ycombinator.com/item?id=44537955" target="_blank">Hacker News</a>.
+							<a href="https://news.ycombinator.com/item?id=44537955" target="_blank">Hacker News</a>
 						    </b>
 					          </font>
 					  	</span>
