--- a/index.html
+++ b/index.html
@@ -632,13 +632,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://xinze-zheng.github.io" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now),
 									awarded <a href="https://siebelschool.illinois.edu/about/awards/undergraduate-scholarships-awards/jeffrey-p-blahut-memorial-scholarship" target="_blank"><font color="#E84A27">Jeffrey P. Blahut Memorial Scholarship</font></a>
 								</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a>, Undergraduate Student (Tsinghua) (Spring 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shanbo Zhang</a>, Undergraduate Student (UIUC) (Spring 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Rubin Du</a>, Undergraduate Student (UIUC) (Spring 2025 - now)</p>
-				<!--
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Xuecheng Liu</a>, Undergraduate Student (ZJU-UIUC) (Summer 2024 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Quan Hao Ng</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
-				      -->
                              </TD>
                           </TR>
 
@@ -678,6 +673,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="thesis/ANG-THESIS-2019.pdf" target="_blank">thesis</a>) &rarr; Google (Spanner) &rarr; Columbia University (PhD)</p>
 				  <p class="STYLE224"># Bachelors</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a> (Tsinghua), Spring and Summer 2025</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Minh Phan</a>, BS, Spring 2025 &rarr; University of Texas at Austin (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/mark-zhang-zzx" target="_blank">Zhixing (Mark) Zhang</a>, BS, Spring 2024 &rarr; <a href="https://pathlit.com" target="_blank">Pathlit</a> (CTO)</p>
 				  <p class="STYLE223"><a href="https://odeinjul.github.io" target="_blank">Shurang Wu</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; University of Texas at Austin (PhD)</p>
