--- a/index.html
+++ b/index.html
@@ -444,8 +444,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
 				<p class="STYLE223">Jackson will give tutorials on benchmarking AI agents for system reliability problems at 
-					<a href="https://dsn2025.github.io/cptutorials.html" target="_blank">DSN</a> and 
-					<a href="https://conf.researchr.org/track/fse-2025/fse-2025-tutorials?" target="_blank">FSE</a>
+					<a href="https://dsn2025.github.io/cptutorials.html" target="_blank">DSN</a>, 
+					<a href="https://conf.researchr.org/track/fse-2025/fse-2025-tutorials?" target="_blank">FSE</a>,
+					and SOSP.
 				</p>
 				<p class="STYLE223">ITBench is spotlighted by <a href="https://discoveryacceleratorinstitute.grainger.illinois.edu/news/76016" target="_blank">IBM-Illinois Discovery Accelerator Institute</a>.</p> 
 				<p class="STYLE223">Jinghao will present <a href="https://github.com/rex-rs/rex/" target="_blank">Rex</a> at <a href="https://sched.co/1zfpE" target="_blank">Open Source Summit</a></p>
