--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
-				<p class="STYLE223">Jackson will give tutorials on benchmarking AI agents for system reliability problems at 
+				<p class="STYLE223">Jackson will give tutorials on benchmarking AI agents for system reliability at 
 					<a href="https://dsn2025.github.io/cptutorials.html" target="_blank">DSN</a>, 
 					<a href="https://conf.researchr.org/track/fse-2025/fse-2025-tutorials?" target="_blank">FSE</a>,
 					and SOSP.
