--- a/travel.html
+++ b/travel.html
@@ -179,6 +179,7 @@ div.Section1
 			    <li>Xiong'an (2025) </li>
                             <li>Yangzhou (1996) </li>
                             <li>Yixing (1996, 2024) </li>
+			    <li>Zhangjiakou (2025) </li>
                           </ul>
                         </li>
 						<li><font color="#083b89"><b>Croatia</b></font>:
