--- a/pub.html
+++ b/pub.html
@@ -78,6 +78,22 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">ApSys'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>CPU Autoscaling With a Kernel of Truth</strong> [<a href="pub/kscaler.pdf" target="_blank">pdf</a> | <a href="pub/kscaler_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Pratik Rajesh Sampat, Tianyin Xu, and Saugata Ghose
+						  <br>
+						  In Proceedings of the 16th ACM SIGOPS Asia-Pacific Workshop on Systems (<font color="#083b89"><b>ApSys'25</b></font>), Seoul, Korea, Oct. 2025.
+					  </span>
+				  </div>
+		  </td>
+	</tr> 
+
+	<tr>
 		<td class="date"><font color="#083b89">MICRO'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
