--- a/pub.html
+++ b/pub.html
@@ -113,7 +113,7 @@ td.papers {
 	</tr>
 
 	<tr>
-		<td class="date"><font color="#083b89">ATC'25</font></td>
+		<td class="date"><font color="#083b89">USENIX <br> ATC'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
 					<p></p>
@@ -422,7 +422,7 @@ td.papers {
 	</tr>
 -->
 	<tr>
-		<td class="date"><font color="#083b89">ATC'24</font></td>
+		<td class="date"><font color="#083b89">USENIX <br> ATC'24</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
 					<p></p>
@@ -916,7 +916,7 @@ td.papers {
 	</tr>
 	  
 	<tr>
-		<td class="date"><font color="#083b89">ATC'22</font></td>
+		<td class="date"><font color="#083b89">USENIX <br> ATC'22</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
 					  <p></p>
