--- a/pub.html
+++ b/pub.html
@@ -129,7 +129,7 @@ td.papers {
 	</tr>
 
 	<tr>
-		<td class="date"><font color="#083b89">ATC'25</font></td>
+		<td class="date"><font color="#083b89">USENIX <br> ATC'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
 					<p></p>
@@ -438,7 +438,7 @@ td.papers {
 	</tr>
 -->
 	<tr>
-		<td class="date"><font color="#083b89">ATC'24</font></td>
+		<td class="date"><font color="#083b89">USENIX <br> ATC'24</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
 					<p></p>
@@ -932,7 +932,7 @@ td.papers {
 	</tr>
 	  
 	<tr>
-		<td class="date"><font color="#083b89">ATC'22</font></td>
+		<td class="date"><font color="#083b89">USENIX <br> ATC'22</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
 					  <p></p>
