--- a/index.html
+++ b/index.html
@@ -674,11 +674,12 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="thesis/ANG-THESIS-2019.pdf" target="_blank">thesis</a>) &rarr; Google (Spanner) &rarr; Columbia University (PhD)</p>
 				  <p class="STYLE224"># Bachelors</p>
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a> (Tsinghua), Spring and Summer 2025</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a> (Tsinghua), Spring+Summer 2025 &rarr; Tsinghua University (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Minh Phan</a>, BS, Spring 2025 &rarr; University of Texas at Austin (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/mark-zhang-zzx" target="_blank">Zhixing (Mark) Zhang</a>, BS, Spring 2024 &rarr; <a href="https://pathlit.com" target="_blank">Pathlit</a> (CTO)</p>
 				  <p class="STYLE223"><a href="https://odeinjul.github.io" target="_blank">Shurang Wu</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; University of Texas at Austin (PhD)</p>
 				  <p class="STYLE223"><a href="https://songlkkevin.github.io" target="_blank">Linkai Song</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; HKUST (PhD)</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Mustafa Ashfaq</a> (LUMS), UIUC+ SUR in SE, Summer 2024 &rarr; University of Michigan (MS)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Tingxu Ren</a> (Zhejiang University), UIUC+ SUR in SE, Summer 2024 &rarr; Tsinghua University (MS)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a> (LUMS), UIUC+ SUR in SE, 2023-2024 &rarr; UIUC (MS)</p>
 			          <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, BE 2024 &rarr; UIUC (MS)</p>
