--- a/index.html
+++ b/index.html
@@ -405,6 +405,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
+							  <p class="STYLE223">2025 First place, 
+										  <a href="https://foundation.tlapl.us/challenge/index.html#-announcement-winners-of-the-2025-tlai-challenge" target="_blank">GenAI-accelerated TLA+ Challenge</a> (Specula)</p>
 						      <p class="STYLE223">2025 Best Paper Award at ASPLOS'25 (<a href="pub/cxlfork.pdf" target="_blank">cxlfork</a>)</p>
 						      <p class="STYLE223">2025 Spotlight (also selected for oral) at ICML'25 (<a href="https://arxiv.org/abs/2502.05352" target="_blank">ITBench</a>)</p>
 						      <p class="STYLE223">2025 (Spring) UIUC List of Teachers Ranked as Excellent (CS 591SN)</p>
