--- a/index.html
+++ b/index.html
@@ -615,18 +615,18 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                               <TD class=content width="96%">
 								<p class="STYLE223"><a href="https://yulistic.gitlab.io/" target="_blank">Jongyul Kim</a>, Postdoc Research Fellow (Fall 2023 - now)</p>
 								<p class="STYLE223"><a href="https://schai.me" target="_blank">Siyuan Chai</a>, PhD Candidate (Fall 2021 - now)</p>
-				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Candidate (Fall 2021 - now),
+				            		<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Candidate (Fall 2021 - now),
 									awarded <a href="https://mavis.grainger.illinois.edu/" target="_blank"><font color="#E84A27">Mavis Future Faculty Fellow</font></a>
 								</p>
-				                                <p class="STYLE223"><a href="https://tylergu.com" target="_blank">Tyler Gu</a>, PhD Candidate (Fall 2021 - now), 
+				                    <p class="STYLE223"><a href="https://tylergu.com" target="_blank">Tyler Gu</a>, PhD Candidate (Fall 2021 - now), 
 									awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a>,
-									<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>
+									<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a>
+								</p>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 								<p class="STYLE223"><a href="https://jiyuan.is" target="_blank">Jiyuan Zhang</a>, PhD Student (Fall 2022 - now),
 									awarded <a href="https://siebelschool.illinois.edu/about/awards/graduate-fellowships-awards/wing-kai-cheng-fellowship" target="_blank"><font color="#E84A27">Wing Kai Cheng Fellowship</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://wentao.systems" target="_blank">Wentao Zhang</a>, PhD Student (Fall 2023 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
-								<p class="STYLE223"><a href="https://codyrivera.com" target="_blank">Cody Rivera</a>, Visiting PhD Student (Fall 2024 - now) &rarr; University of Wisconsin-Madison (PhD)</p>
 								<p class="STYLE223"><a href="https://cathy-cai.page/" target="_blank">Cathy Cai</a>, PhD Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://hacksonclark.github.io" target="_blank">Jackson Clark</a>, PhD Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://yimingsu01.github.io" target="_blank">Yiming Su</a>, PhD Student (Fall 2024 - now)</p>
@@ -707,6 +707,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://kaiyuanzhang.com/" target="_blank">Kaiyuan Zhang</a> (UT Dallas), Summer 2020 co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> &rarr; Purdue University (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/ymmao/" target="_blank">Yiming Mao</a> (Nanjing University), Summer 2020 &rarr; UC San Diego (MS) &rarr; TikTok</p>    
 			      	  <p class="STYLE224"># Scholars</p>
+				  <p class="STYLE223"><a href="https://codyrivera.com" target="_blank">Cody Rivera</a>, Visiting PhD Student, 2024--2025 &rarr; University of Wisconsin-Madison (PhD)</p>
 				  <p class="STYLE223"><a href="https://wenjiema.com" target="_blank">Wenjie Ma</a>, Research Scholar, 2023--2024 &rarr; University of California Berkeley (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linhao.me" target="_blank">Hao Lin</a>, Visiting PhD Student (Tsinghua), 2023--2024 &harr; Tsinghua University &rarr; Infinigence AI</p>
 				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com" target="_blank">Chaitanya B. Bhandari</a>, Research Scholar, 2021--2022 &rarr; UIUC (MS) &rarr; TigerBeetle</p> 
