--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									(<a href="https://cs423-uiuc.github.io/fall22/" target="_blank">Fall 22</a>)
 									(<a href="https://cs423-uiuc.github.io/fall23/" target="_blank">Fall 23</a>)
 									(<a href="https://cs423-uiuc.github.io/fall24/" target="_blank">Fall 24</a>)
+									(<a href="https://cs423-uiuc.github.io/fall25/" target="_blank">Fall 25</a>)
 								</p>
 								<p class="STYLE223">CS 591(SN): Systems Research Seminar
 									(<a href="https://systems-seminar-uiuc.github.io/spring19/" target="_blank">Spring 19</a>)
@@ -384,6 +385,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									(<a href="https://systems-seminar-uiuc.github.io/spring24/" target="_blank">Spring 24</a>)
 									(<a href="https://systems-seminar-uiuc.github.io/fall24/" target="_blank">Fall 24</a>)
 									(<a href="https://systems-seminar-uiuc.github.io/spring25/" target="_blank">Spring 25</a>)
+									(<a href="https://systems-seminar-uiuc.github.io/fall25/" target="_blank">Fall 25</a>)
 								</p>
 								<p class="STYLE223">CS 591(SE): Software Engineering Seminar
 									(<a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">Fall 19</a>)
