--- a/index.html
+++ b/index.html
@@ -615,7 +615,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>  
                               <TD class=content width="96%">
-								<p class="STYLE223"><a href="https://yulistic.gitlab.io/" target="_blank">Jongyul Kim</a>, Postdoc Research Fellow (Fall 2023 - now)</p>
+								<p class="STYLE223"><a href="https://yulistic.github.io" target="_blank">Jongyul Kim</a>, Postdoc Research Fellow (Fall 2023 - now)</p>
+								<p class="STYLE223"><a href="https://bastoica.github.io" target="_blank">Bogdan "Bo" Alexandru Stoica</a>, Postdoc Research Fellow (Fall 2025 - now)</p>
 								<p class="STYLE223"><a href="https://schai.me" target="_blank">Siyuan Chai</a>, PhD Candidate (Fall 2021 - now)</p>
 				            		<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Candidate (Fall 2021 - now),
 									awarded <a href="https://mavis.grainger.illinois.edu/" target="_blank"><font color="#E84A27">Mavis Future Faculty Fellow</font></a>
