--- a/index.html
+++ b/index.html
@@ -642,6 +642,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Rubin Du</a>, Undergraduate Student (UIUC) (Spring 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Bohan Cui</a>, Undergraduate Student (NJU) (Summer 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Huang</a>, Undergraduate Student (NJU) (Summer 2025 - now)</p>
+								<p class="STYLE223"><a href="https://www.linkedin.com/in/lilygniedz" target="_blank">Lily Gniedziejko</a>, Undergraduate Student (Summer 2025 - now)</p>
                              </TD>
                           </TR>
 
